# appium_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
behave/features/: complete_a_todo.feature  empty_state.feature  environment.py  item_count.feature
behave_package/: __init__.py
behave_package/behave/features/: add_a_todo.feature  delete_a_todo.feature  environment.py  todo_item_limit.feature  update_a_todo.feature
behave_package/behave/features/steps/: mobile_app_steps.py
behave_package/configs/: mobile_element_locators.json
behave_package/libs/: driver_manager.py  locator_reader.py  mobile_automator.py
behave_package/test_runner/: run_behave_tests.bat
configs/: android_app_config.json
libs/: mobile_automator.py  my_product.py
test_runner/: run_behave_tests.bat
